[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Ability/GameplayAbility_ActorSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Ability/GameplayAbility_ActorSpawner_Test.gd" type="Script" id=2]

[node name="GameplayAbility_ActorSpawner" instance=ExtResource( 1 )]
script = ExtResource( 2 )
loop_interval = 0.1
loop_amount = 100
amount = 100

[node name="SpinTimer" type="Timer" parent="." index="3"]
wait_time = 0.1

[connection signal="timeout" from="SpinTimer" to="." method="_on_SpinTimer_timeout"]
